--- a/Turtle/Turtle.html
+++ b/Turtle/Turtle.html
@@ -3,7 +3,8 @@
   </head>
   <body>
     <canvas id="turtlecanvas" height="500" width="800">
-    <script src="https://raw.githubusercontent.com/davebalmer/turtlewax/master/pen.js"></script>
+	    <!-- <script src="https://raw.githubusercontent.com/davebalmer/turtlewax/master/pen.js"></script> -->
+    <script src="http://www.grrok.com/turtle/pen.js"></script>
     <script src="Turtle.js" ></script>
   </body>
 </html>
