added 6-50, and consolidated Turtle.

--- a/Turtle/Turtle.html
+++ b/Turtle/Turtle.html
@@ -2,9 +2,25 @@
   <head>
   </head>
   <body>
-    <canvas id="turtlecanvas" height="500" width="800">
-	    <!-- <script src="https://raw.githubusercontent.com/davebalmer/turtlewax/master/pen.js"></script> -->
+    <canvas id="turtlecanvas" height="500" width="800" />
+    <!-- https://github.com/davebalmer/turtlewax/blob/master/pen.js -->
     <script src="http://www.grrok.com/turtle/pen.js"></script>
-    <script src="Turtle.js" ></script>
+    <script>
+      // attach to a canvas tag
+      var p = new Pen("turtlecanvas");
+
+      // say hello
+      p.jump(10, 20).font("bold 15px Helvetica").text("Hello World!");
+
+      // draw a tiny square
+      p.jump(10, 30).right(10).down(10).left(10).up(10).draw();
+
+      // make a yellow hexigon with a thicker line
+      p.jump(100, 100).fillstyle("#ff0").pensize(2);
+      for (var i = 0; i < 6; i++)
+          p.go(50).turn(60);
+
+      p.draw();
+    </script>
   </body>
 </html>
