added color to style.

--- a/Exercises/SolutionExercise06-50.html
+++ b/Exercises/SolutionExercise06-50.html
@@ -42,6 +42,7 @@
         // to the name of the programmer, and the style to the color.
 	var programmerNameSpan = document.getElementById("programmerName");
         programmerNameSpan.innerHTML = programmerName;
+	// style -- that's CSS!
 	programmerNameSpan.style.color = colorName;
       }
 
