supporting function chaining

--- a/Exercises/SolutionExercise09.html
+++ b/Exercises/SolutionExercise09.html
@@ -14,36 +14,45 @@
       // Make a star. Takes a pen, and the line length per side.
       // The vertices and density can come from the Schafli symbol for the star polygon:
       // https://en.wikipedia.org/wiki/Schl%C3%A4fli_symbol (e.g. {7,3})
-      var star = function(p, numberOfVertices, density, lineLength) {
+      p.star = function(numberOfVertices, density, lineLength) {
         // Remember our current position, angle, and origin.
-        var startingX = p.x;
-        var startingY = p.y;
-        var startingAngle = p._angle;
+        var startingX = this.x;
+        var startingY = this.y;
+        var startingAngle = this._angle;
 
 	// Do the drawing.
-        p.pendown();
-        console.log(p.x + " " + p.y + " " + p._angle);
+        this.pendown();
+        console.log(this.x + " " + this.y + " " + this._angle);
 	// Formula for internal angle of star polygon
 	// per https://en.wikipedia.org/wiki/Star_polygon
 	var internalAngle = (180 * (numberOfVertices - (2 * density))) / numberOfVertices;
 	var turnAngle = 180 - internalAngle;
         for (var i = 0; i < numberOfVertices; i++) {
-          p.turn(turnAngle).go(lineLength);
+          this.turn(turnAngle).go(lineLength);
         }
-        p.draw();
+        this.draw();
 
         // Go back to the starting position, angle, and origin.
-        p.x = startingX;
-        p.y = startingY;
-        p._angle = startingAngle;
-        console.log(p.x + " " + p.y + " " + p._angle);
+        this.x = startingX;
+        this.y = startingY;
+        this._angle = startingAngle;
+        console.log(this.x + " " + this.y + " " + this._angle);
 
 	// Return the pen back to the caller.
-        return p;
+        return this;
+      }
+
+      p.square = function(size) {
+        for (var i = 0; i < 4; i++) {
+          this.go(size).turn(90);
+	}
+        // to be a good function, we want to allow chaining
+        return this;
       }
 
 
-      star(p, 10, 4, 50);
+
+      p.star(10, 4, 50);
 
 
       /*
