Removed tux drawing piece.

--- a/Experiment/snapsvganimation.html
+++ b/Experiment/snapsvganimation.html
@@ -115,8 +115,8 @@ function loadPaths( filename, object, callback ) {
 
 }
 
-var drawing = new Drawing(undefined,'t10,10',0);
-loadPaths( 'Dreaming_tux.svg', drawing, drawing.reverseDraw.bind( drawing ) );
+// var drawing = new Drawing(undefined,'t10,10',0);
+// loadPaths( 'Dreaming_tux.svg', drawing, drawing.reverseDraw.bind( drawing ) );
 
 
 var myDrawing1 = new Drawing( svgString1, 't0, 0, s1.8', 800 );
